[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "duckdb>=1.2.0",
    "duckdb-engine>=0.15.0",
    "luminoso-api>=3.1.1",
    "nltk>=3.9.1",
    "openai>=1.63.0",
    "pandas>=2.2.3",
    "pinecone>=6.0.1",
    "pinecone-client>=5.0.1",
    "replit>=4.1.0",
    "sentence-transformers>=3.4.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.0",
]
